--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,8 @@
           <li><a href="/">Home</a></li>
           <li><a href="/archives">Archive</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="http://twitter.com/redwall_hp">Twitter</a></li>
+          <li><a href="http://twitter.com/WiseSalesman">Twitter</a></li>
+		  <li><a href="http://www.linkedin.com/pub/justin-acker/31/4b6/121">Linkedin</a></li>
           <li><a href="/feed.xml">RSS Feed</a></li>
         </ul>
       </nav>
