--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -16,20 +16,20 @@ layout: default
 
 \<li class="archive\_list"\>
 
-\<time style="color:\#666;font-size:11px;" datetime='{.{post.date \| date:
-"%Y-%m-%d"}}'\>{.{post.date \| date: "%m/%d/%y"}}\</time\> \<a
-class="archive\_list\_article\_link" href='{.{post.url}}'\>{.{post.title}}\</a\>
+\<time style="color:\#666;font-size:11px;" datetime='{{post.date \| date:
+"%Y-%m-%d"}}'\>{{post.date \| date: "%m/%d/%y"}}\</time\> \<a
+class="archive\_list\_article\_link" href='{{post.url}}'\>{{post.title}}\</a\>
 
-\<p class="summary"\>{.{post.summary}}
+\<p class="summary"\>{{post.summary}}
 
 \<ul class="tag\_list"\>
 
 {% for tag in post.tags %}
 
 \<li class="inline archive\_list"\>\<a class="tag\_list\_link" href="/tag/{.{
-tag }}"\>{.{ tag }}\</a\>\</li\>
+tag }}"\>{{ tag }}\</a\>\</li\>
 
-{.% endfor %}
+{% endfor %}
 
 \</ul\>
 
