--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,12 +1,12 @@
-\---
+---
 
 layout: default
 
-\---
+---
 
-\<h2 class="post\_title"\>{.{page.title}}\</h2\>
+<h2 class="post_title">{{page.title}}</h2>
 
-\<ul\>
+<ul>
 
 {% for post in site.posts %}
 
@@ -14,26 +14,26 @@ layout: default
 
 {% if tag == page.tag %}
 
-\<li class="archive\_list"\>
+<li class="archive_list">
 
-\<time style="color:\#666;font-size:11px;" datetime='{{post.date \| date:
-"%Y-%m-%d"}}'\>{{post.date \| date: "%m/%d/%y"}}\</time\> \<a
-class="archive\_list\_article\_link" href='{{post.url}}'\>{{post.title}}\</a\>
+	<time style="color:#666;font-size:11px;" datetime='{{post.date | date:
+	"%Y-%m-%d"}}'>{{post.date | date: "%m/%d/%y"}}</time> <a
+	class="archive_list_article_link" href='{{post.url}}'>{{post.title}}</a>
 
-\<p class="summary"\>{{post.summary}}
+<p class="summary">{{post.summary}}
 
-\<ul class="tag\_list"\>
+<ul class="tag_list">
 
 {% for tag in post.tags %}
 
-\<li class="inline archive\_list"\>\<a class="tag\_list\_link" href="/tag/{.{
-tag }}"\>{{ tag }}\</a\>\</li\>
+<li class="inline archive_list"><a class="tag_list_link" href="/tag/{{
+tag }}">{{ tag }}</a></li>
 
 {% endfor %}
 
-\</ul\>
+</ul>
 
-\</li\>
+</li>
 
 {% endif %}
 
@@ -41,4 +41,4 @@ tag }}"\>{{ tag }}\</a\>\</li\>
 
 {% endfor %}
 
-\</ul\>
+</ul>
