Remove title and description from main layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
 
 
   <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
-    <p>{{ site.description }}</p>
+   <!--  <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
+    <p>{{ site.description }}</p> -->
   </header>
 
 
